Fix image alignment

--- a/src/app/fyle/capture-receipt/receipt-preview/receipt-preview.component.scss
+++ b/src/app/fyle/capture-receipt/receipt-preview/receipt-preview.component.scss
@@ -94,8 +94,13 @@
   //   }
   // }
 
+  &__container {
+    height: 100%;
+    width: 100%;
+  }
+
   &__image-container {
-    width: 100vw;
+    height: 100%;
     margin: 16px;
     background-color: white !important;
     z-index: 12;
